# data-wilayah-indonesia

./: convert_csv_to_json.py  extract_tables.py  package-lock.json  test_package.py
data/: indonesia_administrative_data.csv
docs/: database_lengkap.csv
examples/: lazy-loading.ts  package-lock.json  package.json  simple-usage.ts  tsconfig.json  with-postal-code.ts
extracted_tables/: 1715587369092_page1000_table1.csv  1715587369092_page1001_table1.csv  1715587369092_page1002_table1.csv  1715587369092_page1003_table1.csv  1715587369092_page1004_table1.csv  1715587369092_page1005_table1.csv  1715587369092_page1006_table1.csv  1715587369092_page1007_table1.csv  1715587369092_page1008_table1.csv  1715587369092_page1009_table1.csv  1715587369092_page100_table1.csv  1715587369092_page1010_table1.csv  1715587369092_page1011_table1.csv  1715587369092_page1012_table1.csv  1715587369092_page1013_table1.csv  1715587369092_page1014_table1.csv  1715587369092_page1015_table1.csv  1715587369092_page1016_table1.csv  1715587369092_page1017_table1.csv  1715587369092_page1018_table1.csv  1715587369092_page1019_table1.csv  1715587369092_page101_table1.csv  1715587369092_page1020_table1.csv  1715587369092_page1021_table1.csv  (+4162 more)
javascript/: .gitignore  (+9 more)
python/data_wilayah_indonesia/: README.md  pyproject.toml
python/data_wilayah_indonesia/src/data_wilayah_indonesia/: __init__.py  service.py
python/data_wilayah_indonesia/src/data_wilayah_indonesia/core/entities/: administrative_unit.py  district.py  province.py  regency.py  village.py
python/data_wilayah_indonesia/src/data_wilayah_indonesia/core/interfaces/: district_repository.py  regency_repository.py  village_repository.py
python/data_wilayah_indonesia/src/data_wilayah_indonesia/infrastructure/parsers/: data_aggregator.py
python/data_wilayah_indonesia/src/data_wilayah_indonesia/infrastructure/repositories/: csv_district_repository.py  csv_regency_repository.py
python/data_wilayah_indonesia/src/data_wilayah_indonesia/use_cases/: get_regencies.py
(+845 files in other folders)
