[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-wilayah-indonesia"
version = "1.0.0"
description = "Package Python untuk data wilayah administratif Indonesia (Provinsi, Kabupaten/Kota, Kecamatan, Desa/Kelurahan)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nama Anda", email = "email@example.com"}
]
keywords = ["indonesia", "wilayah", "administrative", "province", "regency", "district", "village", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/username/data-wilayah-indonesia"
Repository = "https://github.com/username/data-wilayah-indonesia"
Issues = "https://github.com/username/data-wilayah-indonesia/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_wilayah_indonesia = ["data/*.csv"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"